# ssl12-ctl

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  ROADMAP.md
packaging/: 70-ssl12.rules
src/: capture.rs  controls.rs  device.rs  lib.rs  meters.rs  mixer.rs  preset.rs  protocol.rs  transport.rs
